agrego width:100% en tarea 01 y 03

--- a/Clase 6/tarea03.css
+++ b/Clase 6/tarea03.css
@@ -5,6 +5,7 @@
     flex-direction:row;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
 .caja1{
     height: 100px;
