--- a/Clase 6/tarea01.css
+++ b/Clase 6/tarea01.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items:flex-end;
     border: 1px solid black;
-    width: 400px;
+    width: 100%;
     justify-content: center;
 }
 
