--- a/Clase 6/tarea03.css
+++ b/Clase 6/tarea03.css
@@ -1,7 +1,7 @@
 .contenedor{
     background-color: white;
     border: 1px solid black;
-    display:inline-flex;
+    display:flex;
     flex-direction:row;
     align-items: center;
     justify-content: space-between;
