--- a/Clase 6/tarea02.css
+++ b/Clase 6/tarea02.css
@@ -1,23 +1,27 @@
-.contenedor{
-    height: 300px;
-    background-color: white;
-    display:inline-flex;
-    flex-direction:row-reverse;
+.contenedor {
     border: 1px solid black;
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    display:flex;
     align-items: center;
-  
+    flex-direction:row-reverse;
 } 
 
-.caja1{
+.caja1 {
     height: 100px;
     width: 100px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
     background-color: red;
     color: white;
     font-weight: bolder;
-    text-align: center;
+    
+    
   }
 
-.caja2{
+.caja2 {
     height: 100px;
     width: 100px;
     background-color: blue;
@@ -26,7 +30,7 @@
     text-align: center;
 }
 
-.caja3{
+.caja3 {
     height: 100px;
     width: 100px;
     background-color: green;
